# BSUIR

2course/4term/: ABC.rar
2course/4term/ABC/: CMakeLists.txt  README.md  lab1_single.cpp  lab2_openmp.cpp  lab3_opencl.cpp  plot_csv_svg.py
2course/4term/IGI/Лк/: python_lectures_8_12_notes.md  ИГИ-10-11.pptx  ИГИ-12.pptx  ИГИ-6 2026.pptx
2course/4term/isp/Labs/Laboratory2/: LibraryLab2.slnx
2course/4term/isp/Labs/Laboratory2/Lab2/: Lab2.csproj
2course/4term/isp/Labs/Laboratory4/: Laboratornay4.slnx
2course/4term/isp/Labs/LibraryForLaboratory1/: LibraryForLab1.slnx
2course/4term/isp/ЛК/: 3_2 Введение в XAML.pptx
2course/4term/ispp/: qqq.db3
2course/4term/ispp/Labs/Laboratory1/Lab1/: Lab1.csproj  (+1 more)
2course/4term/ispp/Labs/Laboratory3/: Laboratornay3.slnx
2course/4term/ispp/Labs/Laboratory5/: Laboratornay5.slnx
2course/4term/ispp/Labs/Laboratory6/: Laboratornay6.slnx
2course/4term/ispp/ЛК/: 1_1 Шаблоны проектирования.pptx  1_2 Архитектура приложения.pptx  1_3_Внедрение зависимостей.pptx  3_1 Введение в .net MAUI.pptx  4_1 Дополнительные возможности XAML.pptx  ЛК10_Потоки.pptx  ЛК11_TPL.pptx
2course/4term/ИГИ/geometric-docker/: Dockerfile
2course/4term/ИГИ/geometric-docker/app/: main.py  requirements.txt
2course/4term/ИГИ/geometric-docker/config/: input.json
2course/4term/Метрология/Lab1/Metrologia-Lab1/: Metrologia-Lab1.slnx  UpgradeLog.htm
2course/4term/ООП/Лабы/Laboratory2/: Laboratory1.slnx
Test/DBFirstApp/: DBFirstApp.slnx
Test/DBFirstApp/DBFirstApp/: DBFirstApp.csproj  HelloappContext.cs  Program.cs
Test/RefOut/RefOut/: Program.cs
(+151 files in other folders)
